<resources>
    <string name="app_name">Sender</string>
    <string name="qrCodeImage">Заголовок</string>
    <string name="Miss">Отсутствует</string>
    <string name="Link">Посмотреть в сети:</string>
    <string name="auth">Basic YWRtaW46aXNha292cw==</string>
    <string name="url">http://sender.sergisa.ru/direct/</string>
    <string name="baseAPIUrl">http://sender.sergisa.ru/api/</string>
    <string name="title_activity_code_create">CodeCreate</string>
    <string name="action_settings">Настройки</string>
    <string name="button">Click</string>

    <string name="snackbar_text">Ссылка скопирована</string>
    <string name="snackbar_button_text">Открыть в браузере</string>

    <string name="saveButton">Сохранить</string>
    <string name="button_to_list">Другие посты</string>
    <string name="MenuAddTags">Добавить Тэги</string>
    <string name="MenuShare">Отправить</string>
    <string name="linkButtonText">Скопировать ссылку</string>
    <string name="qrShow">QR код</string>
    <string name="postTitle">Заголовок</string>
    <string name="typeText">Тип</string>
    <string name="text">Текст поста</string>
    <string name="ethernet_error">Вы не подключены к интернету</string>
    <string name="snackbar_post_view_text">Посмотреть</string>
    <string name="button_to_code">перейти к посту</string>
    <string name="linkCreateText">Создать ссылку</string>
    <string name="codeTitleHint">CodeName</string>
    <string name="tagsEditHint">Tags</string>
    <string name="codeEditHint">Code</string>
</resources>
