<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    app:fontFamily="@font/montserratregular"
    android:fontFamily="@font/montserratregular"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:fontFamily="@font/montserratregular"
        android:fontFamily="@font/montserratregular"
        android:layout_margin="0dp"
        app:cardElevation="2dp"
        app:cardBackgroundColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            app:fontFamily="@font/montserratregular"
            android:fontFamily="@font/montserratregular"
            android:padding="14dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_toStartOf="@id/type"
                android:layout_toLeftOf="@id/type"
                android:fontFamily="@font/montserratregular"
                android:gravity="center"
                android:text="@string/postTitle"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="17sp"
                app:fontFamily="@font/montserratregular"
                app:layout_constraintEnd_toStartOf="@+id/type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:fontFamily="@font/montserratsemibold"
                app:fontFamily="@font/montserratsemibold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/type"
                style="@style/langStyle"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style"
                android:text="@string/typeText"
                android:textSize="13sp" />


            <TextView
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/code"
                style="@style/CodeAppearence"
                android:maxHeight="120dp"
                android:layout_margin="10dp"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"/>


            <Button
                android:fontFamily="@font/montserrat"
                app:fontFamily="@font/montserrat"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textColor="@color/design_default_color_primary"
                app:layout_constraintTop_toBottomOf="@id/code"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="7dp"
                android:layout_height="40dp"
                android:id="@+id/qrBtn"
                android:layout_below="@id/code"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"

                android:text="@string/qrShow" />

            <Button
                android:id="@+id/linkButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/code"

                android:layout_marginTop="7dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/linkButtonText"
                android:textColor="@color/puprle"
                app:fontFamily="@font/montserrat"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/code" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>