<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:bind="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="ru.sergisa.sender.activity.CodeCreateFragment"
    tools:showIn="@layout/activity_code_create">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <android.support.v7.widget.CardView

        android:id="@+id/card"
        android:padding="9dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBarForm"
            android:visibility="visible"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="17sp"
            android:id="@+id/ErrorMessage"
            android:visibility="visible"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:id="@+id/parentFormLayout"
            android:layout_margin="15dp"
            android:gravity="center"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <EditText
                    app:fontFamily="@font/montserratregular"
                    android:id="@+id/titleEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:autofillHints="@string/app_name"
                    android:drawableTint="#FF4081"
                    android:hint="CodeName"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:errorEnabled="false"
                android:layout_height="wrap_content">

                <EditText
                    app:fontFamily="@font/montserratregular"
                    android:id="@+id/tagsEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:autofillHints="@string/app_name"
                    android:drawableTint="#FF4081"
                    android:hint="Tags"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:layout_height="wrap_content">

                <EditText
                    app:fontFamily="@font/montserratregular"
                    android:fontFamily="@font/montserratregular"
                    android:id="@+id/codeEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:autofillHints="@string/app_name"
                    android:drawableTint="#9340FF"
                    android:hint="Code"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>

            <!--
            <senderer.EditAreaView
                android:id="@+id/codeEdit"
                android:layout_width="match_parent"
                android:layout_height="300dp"/>
-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
               <Spinner
                    app:fontFamily="@font/montserratregular"
                    android:fontFamily="@font/montserratregular"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="start"
                    android:id="@+id/typeSelector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
               <Button
                   app:fontFamily="@font/montserratmedium"
                   style="@style/Widget.AppCompat.Button.Borderless.Colored"
                   android:gravity="center_horizontal|center_vertical"
                   android:layout_alignParentEnd="true"
                   android:layout_alignParentRight="true"
                   android:id="@+id/saveButton"
                   android:textColor="@color/design_default_color_primary"
                   android:layout_gravity="end"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/saveButton" />

            </RelativeLayout>



        </LinearLayout>

    </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">


            <Button
                app:fontFamily="@font/montserratregular"
                android:fontFamily="@font/montserratregular"
                android:id="@+id/ListView"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_to_list" />

            <Button
                android:id="@+id/jump_to_code"
                android:visibility="gone"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_to_code" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
